syntax = "proto3";

import "google/protobuf/any.proto";

enum RequestType {
  GET_ALL_DATA = 0;
}

message ControlMsg {
  string id = 1;
  RequestType type = 2;
  google.protobuf.Any data = 3; // data is protobuf-serialized data in terms of specified type
}

message TableContent {
  repeated string keyPath = 1;
  repeated google.protobuf.Any entries = 2; // each entry is a JSON-serialized object
}

message DBContent {
  map<string, TableContent> tables = 1;
}